Replace project file with new version

--- a/soft/app/.gitignore
+++ b/soft/app/.gitignore
@@ -1,3 +1,19 @@
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -6,7 +22,6 @@ target/
 ### IntelliJ IDEA ###
 .idea/
 *.iws
-*.iml
 *.ipr
 
 ### Eclipse ###
@@ -30,6 +45,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-### Mac OS ###
-.DS_Store
